--- a/client/index.html
+++ b/client/index.html
@@ -89,8 +89,11 @@
     Img.player.src = '/client/img/player.png';
     Img.bullet = new Image();
     Img.bullet.src = '/client/img/bullet.png';
-    Img.map = new Image();
-    Img.map.src = '/client/img/map.png';
+    Img.map = {};
+    Img.map['field'] = new Image();
+    Img.map['field'].src = '/client/img/map.png';
+    Img.map['forest'] = new Image();
+    Img.map['forest'].src = '/client/img/map2.png';
 
     var ctx = document.getElementById("ctx").getContext("2d");
     ctx.font = '30px Arial'; 
@@ -105,6 +108,8 @@
         self.hp = initPack.hp;
         self.hpMax = initPack.hpMax;
         self.score = initPack.score;
+        self.map = initPack.map;
+        
 
         self.draw = function () {
             var x = self.x - Player.list[selfId].x + WIDTH / 2;
@@ -134,8 +139,11 @@
             self.id = initPack.id;
             self.x = initPack.x;
             self.y = initPack.y;
+            self.map = initPack.map;
 
             self.draw = function () {
+                if(Player.list[selfId].map !== self.map)
+                    return;
                 var width = Img.bullet.width/2;
                 var height = Img.bullet.width/2;
                 
@@ -232,9 +240,10 @@
     },40);
 
     var drawMap = function() {
-        var x = WIDTH/2 - Player.list[selfId].x;
-        var y = HEIGHT/2 - Player.list[selfId].y;
-        ctx.drawImage(Img.map,x,y);
+        var player = Player.list[selfId];
+        var x = WIDTH/2 - player.x;
+        var y = HEIGHT/2 - player.y;
+        ctx.drawImage(Img.map[player.map],x,y);
     }
 
     var drawScore = function (){
